# snipping_tool

./: Cargo.toml  README.md
src/: direct2d.rs  main.rs  main.rsb  win_fact.rs
src/modules/: direct2d.rs  errorhandler.rs  mod.rs  win_fact.rs  window_controller.rs  winproc.rs
